# servant-uverb

./: .travis.yml  README.md  cabal.project  handler.hs  servant-uverb.cabal  shell.nix  stack-14.12.yaml  stack-15.4.yaml  stack.yaml
servant-uverb/: servant-uverb.cabal
servant-uverb-client/: servant-uverb-client.cabal
servant-uverb-client/src/Servant/Client/: UVerb.hs
servant-uverb-client/src/Servant/UVerb/: Client.hs
servant-uverb-client/test/: Spec.hs
servant-uverb-mock/: servant-uverb-mock.cabal
servant-uverb-mock/src/Servant/Mock/: UVerb.hs
servant-uverb-server/: servant-uverb-server.cabal
servant-uverb-server/src/Servant/Server/: UVerb.hs
servant-uverb-server/src/Servant/UVerb/: Server.hs
servant-uverb-swagger/: servant-uverb-swagger.cabal
servant-uverb-swagger/src/Servant/Swagger/: UVerb.hs
servant-uverb-swagger/src/Servant/UVerb/: Swagger.hs
servant-uverb-swagger/test/: Spec.hs
servant-uverb/src/Servant/: OpenUnion.hs  UVerb.hs
servant-uverb/src/Servant/API/: UVerb.hs
servant-uverb/src/Servant/API/UVerb/: OpenUnion.hs
servant-uverb/src/Servant/UVerb/: OpenUnion.hs
src/: ServantUverb.hs
